crates/php-parser/tests/snapshots/nikic_error_tests__nikic_errorhandling_recovery_14.snap
---
source: crates/php-parser/tests/nikic_error_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "VariableVariable": {
              "kind": "Error",
              "span": {
                "start": 7,
                "end": 7
              }
            }
          },
          "span": {
            "start": 6,
            "end": 7
          }
        }
      },
      "span": {
        "start": 6,
        "end": 7
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 7
  }
}
